fixed chat layout in narrow view + submissions card spacing

--- a/src/styles/Submissions.css
+++ b/src/styles/Submissions.css
@@ -48,9 +48,11 @@
 }
 
 .task-title {
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
 }
 
 .task-description {
   margin-bottom: 0;
+  padding: 1em 2em 0.5em 2em;
+  text-align: left;
 }
